--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/home/chelsea/Desktop/Webdev-udemy/HTML-personal website/FB_IMG_1642473179362-modified (1).png" width=200""height="200" alt=""></td>
+      <td><img src="/images/FB_IMG_1642473179362-modified (1).png" width=200""height="200" alt=""></td>
       <td><h1>Chelsea Scholler</h1>
 
       <p><em><strong>Certified Occupational Therapist and Software Engineer</strong></em></p>
