--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
   <li>CSS</li>
     </ul>
 
-  <a href="contactme.html">Contact Me</a>
+  <a href="mailto:chelsea.scholler@gmail.com">Contact Me</a>
 
 </html>
