--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <hr>
     <h3>Certifications</h3>
 
-    <li>1. 100devs 2022 Software Engineering Bootcamp <a href="">https://leonnoel.com/100devs/</a> </li>
-    <li>2. The Complete 2022 Web Development Bootcamp <a href="">https://www.udemy.com/course/the-complete-web-development-bootcamp/?utm_source=sendgrid.com&utm_medium=email&utm_campaign=email</a></li>
+    <li>1. <a href="https://leonnoel.com/100devs/">100devs 2022 Software Engineering Bootcamp</a> </li>
+    <li>2. <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?utm_source=sendgrid.com&utm_medium=email&utm_campaign=email">The Complete 2022 Web Development Bootcamp</a></li>
   </ol>
 <hr>
 <h3>Work Experience</h3>
@@ -50,7 +50,7 @@
 <h3>Skills</h3>
 <ul>
   <li>HTML</li>
-  <li>Java Script </li>
+  <li>JavaScript </li>
   <li>CSS</li>
     </ul>
 
